--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   </head>
   <body class="mat-typography">
     <app-root></app-root>
